--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -3,9 +3,10 @@
 	--color-bg-primary: var(--base-00);
 	--input-bg-primary: var(--base-05);
 	--color-bg-secondary: var(--base-10);
-	--color-border-primary: var(--base-10);
-	--color-tx-muted: var(--base-30);
+	--color-border-primary: var(--base-30);
+	--color-tx-muted: var(--base-40);
 	--font-default: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Inter", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+	--font-mono: ui-monospace, SFMono-Regular, "Cascadia Code", "IBM Plex Mono", "Roboto Mono", "DejaVu Sans Mono", "Liberation Mono", Menlo, Monaco, "Consolas", "Source Code Pro", monospace;
 }
 
 @media (prefers-color-scheme: light) {
@@ -13,8 +14,60 @@
 		--base-00: var(--flexoki-paper);
 		--base-05: var(--flexoki-50);
 		--base-10: var(--flexoki-100);
+		--base-15: var(--flexoki-150);
+		--base-20: var(--flexoki-200);
+		--base-30: var(--flexoki-300);
+		--base-40: var(--flexoki-400);
+		--base-50: var(--flexoki-500);
+		--base-60: var(--flexoki-600);
+		--base-70: var(--flexoki-700);
+		--base-80: var(--flexoki-800);
+		--base-85: var(--flexoki-850);
+		--base-90: var(--flexoki-900);
+		--base-95: var(--flexoki-950);
 
-		--base-10: var(--flexoki-100);
+		--info-05: var(--flexoki-yellow-50);
+		--info-10: var(--flexoki-yellow-100);
+		--info-15: var(--flexoki-yellow-150);
+		--info-20: var(--flexoki-yellow-200);
+		--info-30: var(--flexoki-yellow-300);
+		--info-40: var(--flexoki-yellow-400);
+		--info-50: var(--flexoki-yellow-500);
+		--info-60: var(--flexoki-yellow-600);
+		--info-70: var(--flexoki-yellow-700);
+		--info-80: var(--flexoki-yellow-800);
+		--info-85: var(--flexoki-yellow-850);
+		--info-90: var(--flexoki-yellow-900);
+		--info-95: var(--flexoki-yellow-950);
+
+		--success-05: var(--flexoki-green-50);
+		--success-10: var(--flexoki-green-100);
+		--success-15: var(--flexoki-green-150);
+		--success-20: var(--flexoki-green-200);
+		--success-30: var(--flexoki-green-300);
+		--success-40: var(--flexoki-green-400);
+		--success-50: var(--flexoki-green-500);
+		--success-60: var(--flexoki-green-600);
+		--success-70: var(--flexoki-green-700);
+		--success-80: var(--flexoki-green-800);
+		--success-85: var(--flexoki-green-850);
+		--success-90: var(--flexoki-green-900);
+		--success-95: var(--flexoki-green-950);
+
+		--error-05: var(--flexoki-red-50);
+		--error-10: var(--flexoki-red-100);
+		--error-15: var(--flexoki-red-150);
+		--error-20: var(--flexoki-red-200);
+		--error-30: var(--flexoki-red-300);
+		--error-40: var(--flexoki-red-400);
+		--error-50: var(--flexoki-red-500);
+		--error-60: var(--flexoki-red-600);
+		--error-70: var(--flexoki-red-700);
+		--error-80: var(--flexoki-red-800);
+		--error-85: var(--flexoki-red-850);
+		--error-90: var(--flexoki-red-900);
+		--error-95: var(--flexoki-red-950);
+
 	}
 }
 @media (prefers-color-scheme: dark) {
@@ -85,6 +138,8 @@
   --flexoki-red-200:         #F89A8A;
   --flexoki-red-300:         #E8705F;
   --flexoki-red-400:         #D14D41;
+  --flexoki-red-400-40:      rgba(209, 77, 65, 0.4);
+  --flexoki-red-400-20:      rgba(209, 77, 65, 0.2);
   --flexoki-red-500:         #C03E35;
   --flexoki-red-600:         #AF3029;
   --flexoki-red-700:         #942822;
@@ -113,6 +168,8 @@
   --flexoki-yellow-200:      #ECCB60;
   --flexoki-yellow-300:      #DFB431;
   --flexoki-yellow-400:      #D0A215;
+  --flexoki-yellow-400-20:      rgba(81.6%, 63.5%, 8.24%, 20%);
+  --flexoki-yellow-400-40:      rgba(81.6%, 63.5%, 8.24%, 20%);;
   --flexoki-yellow-500:      #BE9207;
   --flexoki-yellow-600:      #AD8301;
   --flexoki-yellow-700:      #8E6B01;
@@ -128,6 +185,8 @@
   --flexoki-green-300:       #A0AF54;
   --flexoki-green-400:       #879A39;
   --flexoki-green-500:       #768D21;
+  --flexoki-green-500-20:       #768d2154;
+  --flexoki-green-500-40:       #768d2154;
   --flexoki-green-600:       #66800B;
   --flexoki-green-700:       #536907;
   --flexoki-green-800:       #3D4C07;
@@ -142,6 +201,8 @@
   --flexoki-cyan-300:        #5ABDAC;
   --flexoki-cyan-400:        #3AA99F;
   --flexoki-cyan-500:        #2F968D;
+	--flexoki-cyan-500-40: rgba(18.4%, 58.8%, 55.3%, 0.4);
+	--flexoki-cyan-500-20: rgba(18.4%, 58.8%, 55.3%, 0.2);
   --flexoki-cyan-600:        #24837B;
   --flexoki-cyan-700:        #1C6C66;
   --flexoki-cyan-800:        #164F4A;
